# Humanity_Founders

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  implementation_plan.md  next.config.mjs  render.yaml  start.sh  task_list.md  test_form.json  walkthrough.md
app/: globals.css  layout.tsx  page.tsx
app/console/: layout.tsx
app/console/admin/: page.tsx
app/console/builder/: page.tsx
app/console/builder/[id]/: page.tsx
app/console/preview/[id]/: page.tsx
app/console/submissions/[id]/: page.tsx
app/public/form/[id]/: page.tsx
backend/: .dockerignore  .env.example  database.py  init_db.py  logic_engine.py  main.py  models.py  pyproject.toml  schemas.py  test.db
backend/safety_form_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
components/: TopNav.tsx
components/builder/: FieldBuilder.tsx  ImportJSONDialog.tsx  RuleBuilder.tsx  SchemaBuilder.tsx  TemplateSelector.tsx
components/form/: CheckboxField.tsx  DateField.tsx  FormRenderer.tsx  RadioField.tsx  SelectField.tsx  TextAreaField.tsx  TextField.tsx
components/ui/: radio.tsx
design-system/: MASTER.md
lib/: api-client.ts  logic.ts  templates.ts
types/: forms.ts
